syntax = "proto3";
package DomainServices.CodebookService.v1;
option csharp_namespace = "DomainServices.CodebookService.Contracts.v1";

import "google/protobuf/wrappers.proto";

message GenericCodebookWithRdmCodeResponse {
	repeated GenericCodebookWithRdmCodeItem Items = 1;

	message GenericCodebookWithRdmCodeItem {
	   int32 Id = 1;
	   string Name = 2;
	   google.protobuf.StringValue RdmCode = 3;
	   bool IsValid = 4;
	}
}